# ViRE

./: .gitattributes  .gitignore  README.md  VIRE_Report.md  pyproject.toml  test.sh
scripts/: convert_report_format.py  eval_full.sh  summarize_report.py
scripts/.ipynb_checkpoints/: summarize_report-checkpoint.py
src/vi_retrieval_eval/: cli.py  dedup.py  dense_index.py  fusion.py  io_utils.py  lexical.py  logging_utils.py  metrics.py  progress.py  qrels.py  runner.py  sampling.py  stats.py  textnorm.py  tokenization.py
src/vi_retrieval_eval.egg-info/: PKG-INFO  SOURCES.txt
src/vi_retrieval_eval/.ipynb_checkpoints/: cli-checkpoint.py  dense_index-checkpoint.py  fusion-checkpoint.py  io_utils-checkpoint.py  lexical-checkpoint.py  logging_utils-checkpoint.py  metrics-checkpoint.py  progress-checkpoint.py  qrels-checkpoint.py  runner-checkpoint.py  sampling-checkpoint.py  stats-checkpoint.py  textnorm-checkpoint.py  tokenization-checkpoint.py
src/vi_retrieval_eval/embeddings/: __init__.py  base.py  colbert_backend.py  gemini_embed.py  llm_embed.py  openai_embed.py  sbert_embed.py  splade_backend.py
src/vi_retrieval_eval/embeddings/.ipynb_checkpoints/: __init__-checkpoint.py  base-checkpoint.py  colbert_backend-checkpoint.py  gemini_embed-checkpoint.py  llm_embed-checkpoint.py  openai_embed-checkpoint.py  sbert_embed-checkpoint.py  splade_backend-checkpoint.py
